--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "component-emitter": "^1.3.0",
     "concat-map": "^0.0.1",
     "console-control-strings": "^1.1.0",
+    "console.table": "^0.10.0",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.4",
     "convert-source-map": "^1.8.0",
@@ -488,7 +489,7 @@
   },
   "scripts": {
     "test": "jest",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
